src/test/deca/codegen/valid/test_if_convfloat_expr.deca
// @result ok
// @result ok
// @result ok
// @result ok
{
	if (2.5 + 3) {
		println("ok");
	} else {
		println("ko");
	}
	
	if (2 + 3.5) {
		println("ok");
	} else {
		println("ko");
	}
	
	if (0 * 2.5) {
		println("ko");
	} else {
		println("ok");
	}
	
	if (0.0 * 2) {
		println("ko");
	} else {
		println("ok");
	}
}
