src/test/deca/codegen/invalid/test_if_float_var.deca
// @result ok
// @result ok
{
        float x = 2.34;
        if (x) {
                println("ok");
        } else {
                println("ko");
        }
        x = 0.0;
        if (x) {
                println("ko");
        } else {
                println("ok");
        }
}

